--- a/.gitignore
+++ b/.gitignore
@@ -8,22 +8,28 @@
 # testing
 /coverage
 
+# next.js
+/.next
+/out
+
 # production
 /build
 
 # misc
 .DS_Store
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.pem
+Thumbs.db
 
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-.eslintcache
+# dotenv local files
+.env*.local
 
-Server/node_modules
-Server/config.js
+# local folder
+local
+
+# vercel
+.vercel
